--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,15 +3,16 @@
 }
 
 html {
-  font: 20px/1.3 var(--font-family);
   color: var(--color-text);
 }
 
 body {
   margin: 0;
-  padding: var(--padding-scaled);
+  padding: var(--block-padding) var(--inline-padding);
   background-color: var(--color-background);
-  font: var(--font-sm);
+  font-family: var(--font-family);
+  font-size: var(--font-size-md);
+  line-height: var(--line-height-md);
   display: flex;
   justify-content: center;
 }
@@ -38,14 +39,6 @@ body {
   border-width: 0;
 }
 
-.scaled--small {
-  font: var(--font-md);
-}
-
-.scaled {
-  font: var(--font-3xl);
-}
-
 a {
   color: var(--color-link);
 }
@@ -62,7 +55,6 @@ a:focus {
 a.skip-link {
   position: absolute;
   top: -3rem;
-  font: var(--font-xs);
 }
 
 a.skip-link:focus {
@@ -70,12 +62,11 @@ a.skip-link:focus {
 }
 
 a.more {
-  font: var(--font-xs);
   font-weight: 400;
   color: var(--color-text);
   text-decoration: none;
   display: block;
-  margin: var(--padding-scaled-05) 0 0;
+  margin: var(--spacing-md) 0 0;
 }
 
 a.more:hover {
@@ -87,7 +78,7 @@ a.back {
   color: var(--color-text);
   text-decoration: none;
   display: block;
-  margin: var(--padding-scaled) 0;
+  margin: var(--spacing-lg) 0;
 }
 
 a.back:hover {
@@ -104,40 +95,50 @@ a.contact:hover {
 }
 
 p {
-  margin: 0.6em 0 0;
-  max-width: var(--font-sm-max-width);
+  margin: var(--spacing-sm) 0 0;
+  max-width: 80ch;
+}
+
+h1, .intro {
+  font-weight: 500;
+  margin: var(--spacing-lg) 0 var(--spacing-lg) -0.05em;
+  font-size: var(--font-size-xl);
+  line-height: var(--line-height-xl);
+  text-wrap: balance;
+  max-width: 40ch;
 }
 
 h1 {
   font-weight: 600;
-  margin: var(--padding-scaled) 0 var(--padding-scaled-2) -0.05em;
-  font: var(--font-4xl);
+}
+
+@media (min-width: 40rem) {
+  h1, .intro {
+    margin-block: var(--spacing-xl);
+  }
 }
 
 h2 {
   color: var(--color-text);
   font-weight: 600;
-  margin: var(--padding-scaled-2) 0 var(--padding-scaled-05) -0.025em;
-  font: var(--font-2xl);
-  max-width: 15em;
+  margin: var(--spacing-xl) 0 var(--spacing-lg) -0.025em;
+  font-size: var(--font-size-lg);
+  line-height: var(--line-height-lg);
+  max-width: 40ch;
 }
 
-@media (min-width: 48rem) {
-  h2.scaled {
-    margin-left: -0.05em;
-  }
+h3, .h3 {
+  font-size: var(--font-size-lg);
+  line-height: var(--line-height-lg);
+  font-weight: 300;
+  margin: var(--spacing-lg) 0 var(--spacing-md) -0.025em;
+  max-width: 40ch;
 }
 
-h3 {
-  font: var(--font-xl);
-  margin: 1.5em 0 0.75em -0.025em;
-  font-weight: 600;
-}
-
-h4 {
-  font: var(--font-lg);
-  margin: 1em 0 0.5em;
-  font-weight: 600;
+h4, .h4 {
+  font-size: var(--font-size-md);
+  margin: var(--spacing-md) 0 var(--spacing-sm);
+  font-weight: 800;
 }
 
 ul {
@@ -147,13 +148,13 @@ ul {
 }
 
 ul.contacts {
-  margin: var(--padding-scaled) 0;
+  margin: var(--spacing-lg) 0;
   padding: 0;
   list-style-position: inside;
 }
 
 li {
-  max-width: var(--font-sm-max-width);
+  max-width: 80ch;
   margin-top: 0.3em;
 }
 
