--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,15 +3,21 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
-  gap: 1rem 3rem;
+  gap: var(--spacing-md) var(--spacing-xl);
 }
 
 :is(nav.main, nav.languages) ul {
-  display: flex;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  align-items: baseline;
+}
+
+@media (min-width: 40rem) {
+  :is(nav.main, nav.languages) ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    gap: var(--spacing-sm) var(--column-spacing);
+  }
 }
 
 :is(nav.main, nav.languages) li {
@@ -24,7 +30,6 @@ header {
 
 :is(nav.main, nav.languages) a {
   color: var(--color-text);
-  font: var(--font-xs);
   text-decoration: none;
   display: block;
 }
@@ -33,38 +38,14 @@ header {
   color: var(--color-link-hover);
 }
 
-nav.main .logo {
-  display: block;
-  font-weight: 700;
-  margin-right: 1.5rem;
-  font-size: 2rem;
-  line-height: 0.85;
-  color: var(--color-text-10);
-}
-
-nav.main ul {
-  gap: 0.5rem 1.5rem;
-}
-
 nav.main a[aria-current="page"] {
   font-weight: 700;
 }
 
-nav.languages ul {
-  gap: 0.5rem 0;
-}
-
-nav.languages li {
-  display: flex;
-  align-items: baseline;
+nav.languages {
+  text-align: right;
 }
 
 nav.languages li.active a {
   font-weight: 700;
-}
-
-nav.languages li:not(:last-child)::after {
-  content: "|";
-  margin: 0 0.25em;
-  font-weight: 400;
 }
