--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,4 +1,8 @@
 :root {
+  --block-padding: 1rem;
+  --inline-padding: 1rem;
+
+
   /* colors */
   --color-lightgrey: #eae8f0;
   --color-lightgrey-90: rgba(234, 232, 240, 0.9);
@@ -46,28 +50,22 @@
   /* fonts */
   --font-family: "Borna", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-  --font-xs: 400 0.8rem/1.1 var(--font-family);
-  --font-sm-max-width: unset;
-  --font-sm: calc(min(max(2.5vw + 0.05rem, 0.8rem), 1rem))/calc(min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem)) var(--font-family);
-  --font-sm-max-width: 45em;
-  --font-md: calc(min(5vw + 0.1rem, 1.5rem))/1.4 var(--font-family);
-  --font-md-max-width: 33em;
-  --font-lg: calc(min(5vw + 0.2rem, 1.25rem))/1.3 var(--font-family);
-  --font-lg-max-width: 25em;
-  --font-xl: calc(min(5vw + 0.3rem, 1.75rem))/1.3 var(--font-family);
-  --font-xl-max-width: 20em;
-  --font-2xl: calc(min(5vw + 0.5rem, 3rem))/1.3 var(--font-family);
-  --font-2xl-max-width: 20em;
-  --font-3xl: calc(min(5vw + 0.4rem, 4rem))/calc(min(5vw + 0.8rem - 0.1em, 4rem)) var(--font-family);
-  --font-3xl-max-width: 15em;
-  --font-4xl: calc(min(5vw + 0.8rem, 4rem))/calc(min(5vw + 1.2rem - 0.1em, 4rem)) var(--font-family);
-  --font-4xl-max-width: 15em;
+  --font-size-sm: 0.5rem;
+  --font-size-md: 1rem;
+  --font-size-lg: 1.5rem;
+  --font-size-xl: 2rem;
 
-  /* spacing */
-  --padding-scaled-025: calc(min(1.25vw + 0.275rem, 1.175rem));
-  --padding-scaled-05: calc(min(2.5vw + 0.55rem, 2.35rem));
-  --padding-scaled: calc(min(5vw + 1.1rem, 4.7rem));
-  --padding-scaled-2: calc(min(10vw + 2.2rem, 9.4rem));
+  --line-height-sm: 1.6;
+  --line-height-md: 1.4;
+  --line-height-lg: 1.05;
+  --line-height-xl: 1;
+
+  --spacing-sm: 0.5rem;
+  --spacing-md: 1rem;
+  --spacing-lg: 2rem;
+  --spacing-xl: 4rem;
+
+  --column-spacing: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
