--- a/assets/css/templates/profile.css
+++ b/assets/css/templates/profile.css
@@ -1,166 +1,194 @@
-main > section {
+.section {
   margin: var(--spacing-xl) 0;
 }
 
-main > section > dl,
-main .subsection-grid {
+.section__item-grid {
   margin: var(--spacing-lg) 0;
   counter-reset: section;
   display: grid;
   gap: var(--spacing-lg) var(--column-spacing);
 }
 
-@media (min-width: 30rem) {
-  dl.timed > div:nth-child(even) {
-    padding-left: calc((100% - var(--column-spacing) * 3) / 4 + var(--column-spacing));
-  }
+.section-item--blurred {
+  opacity: 0.25;
+}
 
-  dl.timed > div:nth-child(odd) {
-    padding-right: calc((100% - var(--column-spacing) * 3) / 4 + var(--column-spacing));
+@media (prefers-contrast: more) {
+  .section-item--blurred {
+    opacity: 0.6;
   }
 }
 
 @media (min-width: 50rem) {
-  main > section > dl:not(.timed),
-  main .subsection-grid {
+  .section-item {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: var(--spacing-sm) var(--column-spacing);
+  }
+}
+
+.section-item__title {
+  font-weight: 600;
+  font-size: var(--font-size-md);
+  line-height: var(--line-height-md);
+  margin: 0;
+}
+
+dd {
+  margin: 0;
+}
+
+.section-item__list {
+  margin: 0;
+}
+
+.section-item__list > div {
+  opacity: 0.6;
+  margin-top: var(--spacing-sm);
+  margin-left: calc(
+    (100% - var(--column-spacing) * 3) / 4 + var(--column-spacing)
+  );
+}
+
+.section-item__list > div.time {
+  opacity: 1;
+  margin-top: 0;
+  margin-left: 0;
+}
+
+@media (prefers-contrast: more) {
+  .section-item__list > div {
+    opacity: 0.75;
+  }
+}
+
+.section-item__list dt {
+  font-weight: 600;
+}
+
+.section--rated .section-item__list > div {
+  margin-top: var(--spacing-md);
+}
+
+.section--rated .section-item__list > div:first-child {
+  margin-top: 0;
+}
+
+.section--rated .section-item__list dd {
+  display: grid;
+  align-items: center;
+  gap: var(--column-spacing);
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media (min-width: 50rem) {
+  .section-item__list-wrapper {
+    grid-column: 2 / span 3;
+  }
+
+  .section-item__list {
+    grid-column: 2 / span 3;
+    display: grid;
+    gap: var(--spacing-sm) var(--column-spacing);
+  }
+
+  .section--timed .section-item__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section-item__list > div {
+    opacity: 1;
+    margin-top: 0;
+    margin-left: 0;
+    grid-column: 1 / span 3;
+    display: grid;
+    gap: 0 var(--column-spacing);
+  }
+
+  .section--timed .section-item__list > div {
+    grid-column: 2 / span 2;
+    opacity: 0.6;
     grid-template-columns: repeat(2, 1fr);
   }
 
-  dl.timed > div:nth-child(even) {
-    padding-left: calc((100% - var(--column-spacing)) / 2 + var(--column-spacing));
+  /* .section--timed .section-item__list dt {
+    text-align: right;
+  } */
+
+  .section--timed .section-item__list dd {
+    grid-column: 2 / span 1;
   }
 
-  dl.timed > div:nth-child(odd) {
-    padding-right: calc((100% - var(--column-spacing)) / 2 + var(--column-spacing));
+  .section--timed .section-item__list > div.time {
+    grid-column: 1 / span 1;
+    grid-row: 1 / -1;
+    opacity: 1;
+    display: block;
+  }
+
+  .section-item__list dt {
+    font-weight: 400;
+  }
+
+  .section--rated .section-item__list > div {
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 0;
+  }
+
+  .section--rated .section-item__list dd {
+    grid-column-end: span 2;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 100rem) {
-  main > section > dl:not(.timed),
-  main .subsection-grid {
+  .section--timed .section-item__list > div {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .section--timed .section-item__list dd {
+    grid-column: 2 / span 3;
+  }
+
+  .section--rated .section-item__list dd {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
-main .h3,
-main h3 {
-  margin: 0;
+.level-description {
+  grid-column-end: span 2;
 }
 
-main dd dl {
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--column-spacing);
-}
-
-main dd dl > div.time {
+.level {
   width: 100%;
-  margin: 0;
+  height: 0.5rem;
+  display: flex;
+  gap: var(--spacing-xs);
 }
 
-main dd dt {
-  font-weight: 600;
-}
-
-main section:not(.interests-hobbies) :is(dd, li) {
-  margin: 0;
-}
-
-main div.blur {
-  color: var(--color-text-20);
+.level > div {
+  flex: none;
+  background-color: var(--color-text);
+  opacity: 0.125;
+  width: 0.5rem;
+  border-radius: 0.25rem;
 }
 
 @media (prefers-contrast: more) {
-  main div.blur {
-    color: var(--color-text-50);
+  .level > div {
+    opacity: 0;
   }
 }
 
-main .capabilities dl {
-  margin: var(--spacing-md) 0 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: var(--spacing-sm) var(--column-spacing);
+.level > div.active {
+  opacity: 1;
 }
 
-main .capabilities ul {
-  margin: var(--spacing-sm) 0 0;
-  padding: 0;
-}
-
-main .capabilities li {
-  font-weight: 600;
-}
-
-main .capabilities li:not(:first-child) {
-  margin-top: var(--spacing-sm);
-}
-
-main .capabilities li::marker {
-  color: transparent;
-}
-
-main .capabilities dt {
-  font-weight: 600;
-}
-
-main .capabilities dd {
-  align-self: center;
-  position: relative;
-}
-
-main .capabilities .level-description {
-  display: block;
-  font-size: var(--font-size-sm);
-  line-height: var(--line-height-sm);
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  text-align: right;
-  position: absolute;
-  right: 0;
-  top: -0.8rem;
-}
-
-main .capabilities .level {
-  width: 100%;
-  height: 0.2rem;
-  display: flex;
-}
-
-main .capabilities .level > div {
-  flex: 1 1 0;
-  background-color: var(--color-text-10);
-}
-
-main .capabilities .level > div.active {
-  flex: 1 1 0;
-  background-color: var(--color-focus);
-}
-
-main .capabilities .level > div:not(:first-child) {
-  margin-left: 0.2rem;
-}
-
-.interests-hobbies ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -0.5em;
-  max-width: 40em;
-}
-
-.interests-hobbies li {
-  margin-top: 0.5em;
-  margin-right: 1em;
-}
-
-.interests-hobbies li::before {
-  content: "#";
-  color: var(--color-text-40);
-}
-
-.interests-hobbies li::marker {
-  color: transparent;
+@media (min-width: 50rem) {
+  .level-description {
+    opacity: 0.6;
+    grid-column-end: span 1;
+    /* text-align: right; */
+  }
 }
