--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -60,6 +60,7 @@
   --line-height-lg: 1.05;
   --line-height-xl: 1;
 
+  --spacing-xs: 0.25rem;
   --spacing-sm: 0.5rem;
   --spacing-md: 1rem;
   --spacing-lg: 2rem;
